# drift

./: .gitignore  .travis.yml  AUTHORS  Changelog  DrIFT-cabalized.cabal  DrIFT-cabalized.cabal.in  DrIFT.cabal.in  DrIFT.spec.in  LICENSE  Makefile.am  README  README.md  TODO  configure.ac  configure.in  drift-ghc.hs  drift-ghc.in  reconf
code/: FunctorM.hs  GhcBinary.hs  README.txt
docs/: Makefile.am  drift.texi
example/: Makefile.am  TestTerm.hs  TestTerm.out.correct
src/: ChaseImports.hs  DataP.lhs  DrIFT.hs  GenUtil.hs  Makefile.am  ParseLib2.hs  Pretty.lhs  RuleUtils.hs  StandardRules.hs  Unlit.hs  UserRuleArbitrary.hs  UserRuleBinary.hs  UserRuleBitsBinary.hs  UserRuleGhcBinary.hs  UserRuleXml.hs  UserRules.hs  UserRulesGeneric.hs  Version.hs.in  collect_rules.sh  depend.make
src/DrIFT/: Version.hs.in
src/Rules/: Arbitrary.hs  Binary.hs  BitsBinary.hs  FunctorM.hs  Generic.hs  GhcBinary.hs  Monoid.hs  Standard.hs  Utility.hs  Xml.hs
